syntax = "proto2";

package android.automotive.computepipe.proto;

message InputConfig {
  enum InputType {
    DRIVER_VIEW_CAMERA = 0;
    OCCUPANT_VIEW_CAMERA = 1;
    EXTERNAL_CAMERA = 2;
    SURROUND_VIEW_CAMERA = 3;
    VIDEO_FILE = 4;
    IMAGE_FILES = 5;
  }

  optional InputType type = 1;

  enum FormatType {
    RGB = 0;
    NIR = 1;
    NIR_DEPTH = 2;
  }

  optional FormatType format = 2;

  optional int32 width = 3;

  optional int32 height = 4;

  optional int32 stride = 5;

  /**
   * camera identifier to disambiguate multiple instances
   * of InputType. If only one of a certain type is present
   * this should be 0. For VIDEO_FILE this should be 0.
   */
  optional int32 cam_id = 6;

  optional int32 config_id = 7;

  /**
   * for image file input type the following attributes apply
   */
  optional string image_dir = 8;

  enum ImageFileType {
    JPEG = 0;
    PNG = 1;
  }

  optional ImageFileType file_type = 9;
}
